Day-05/path-based-ingress/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: myapp2
        image: hashicorp/http-echo
        args:
        - "-text=Hello from APP2"
        ports:
        - containerPort: 5678
