Day-05/path-based-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: app.learning.in

    http:
      paths:

      - path: /app1
        pathType: Prefix

        backend:
          service:
            name: app1-service
            port:
              number: 80

      - path: /app2
        pathType: Prefix

        backend:
          service:
            name: app2-service
            port:
              number: 80
